--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <h1>Undangan Pernikahan</h1>
+    <h1>Wedding Invitation</h1>
     <h2>Ima & Levi</h2>
     <div class="greeting" id="greeting">Dear,</div>
     <p>Kami mengundangmu untuk hadir dalam hari spesial kami!</p>
