--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ima & Levi Wedding Invitation</title>
+  <title>Putri & Levi Wedding Invitation</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     body {
@@ -118,20 +118,29 @@
   </style>
 </head>
 <body>
+  <nav>
+    <a href="#">HOME</a>
+    <a href="#">ABOUT</a>
+    <a href="#">GALLERY</a>
+    <a href="#">DIRECTION</a>
+    <a href="#">CONTACT</a>
+  </nav>
+
   <section class="hero">
     <div class="left">
       <h2>You're Invited to The Wedding of</h2>
-      <h1>Ima <span>&</span> Levi</h1>
+      <h1>Putri <span>&</span> Levi</h1>
       <p class="date">Saturday, 12<sup>th</sup> October at 8:00 AM</p>
       <p class="desc">
-        Dengan penuh cinta dan harapan, kami mengundang Anda untuk menjadi bagian dari hari bahagia kami. Kehadiranmu sangat berarti bagi kami berdua.
+        With great joy and love in our hearts, we invite you to celebrate our wedding day.
+        Your presence will make our day truly special as we begin this new journey together.
       </p>
       <button>Attending Confirmation</button>
     </div>
 
     <div class="right">
       <div class="photo-frame">
-        <img src="https://www.brides.com/thmb/LMyiMPxRFx82BLiHZC8lySJFnGo=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/marriage-pose-photo-recirc-kyle-john-1-29-4f97523aa049471992292e8d6ddc41ee.jpg" alt="Ima & Levi" />
+        <img src="https://i.imgur.com/nJV5R6z.jpg" alt="Putri & Levi" />
       </div>
     </div>
   </section>
