--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
       max-width: 500px;
     }
 
+    .left .location {
+      font-size: 1rem;
+      color: #444;
+      margin-top: 1.5rem;
+    }
+
+    .left .location a {
+      color: #00695c;
+      text-decoration: none;
+    }
+
     .left button {
       margin-top: 2rem;
       padding: 0.8rem 1.5rem;
@@ -118,22 +129,23 @@
   </style>
 </head>
 <body>
-  <nav>
-    <a href="#">HOME</a>
-    <a href="#">ABOUT</a>
-    <a href="#">GALLERY</a>
-    <a href="#">DIRECTION</a>
-    <a href="#">CONTACT</a>
-  </nav>
+  <audio autoplay loop>
+    <source src="https://open.spotify.com/track/0T5iIrXA4p5GsubkhuBIKV?si=Hza5KL7hQu2gHqYn7a9IZA&context=spotify%3Asearch%3Ai%2Bfound%2Byou" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
   <section class="hero">
     <div class="left">
       <h2>You're Invited to The Wedding of</h2>
-      <h1>Putri <span>&</span> Levi</h1>
-      <p class="date">Saturday, 12<sup>th</sup> October at 8:00 AM</p>
+      <h1>Putri Fatima Aspari<span>&</span> Levi Adam Hansen</h1>
+      <p class="date">Sunday, 31<sup>st</sup> Veomber at 5:00 PM</p>
       <p class="desc">
         With great joy and love in our hearts, we invite you to celebrate our wedding day.
         Your presence will make our day truly special as we begin this new journey together.
+      </p>
+      <p class="location">
+        📍 Venue: <strong>The Shivana Bespoke</strong><br>
+        <a href="https://maps.app.goo.gl/GX4vEHvjsGR1r9ev8" target="_blank">View on Google Maps</a>
       </p>
       <button>Attending Confirmation</button>
     </div>
