--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
     <div class="left">
       <h2>You're Invited to The Wedding of</h2>
       <h1>Putri Fatima Aspari<span>&</span> Levi Adam Hansen</h1>
+      <h1>&</h1>
+      <h1>Levi Adam Hansen</h1>
       <p class="date">Sunday, 31<sup>st</sup> Veomber at 5:00 PM</p>
       <p class="desc">
         With great joy and love in our hearts, we invite you to celebrate our wedding day.
