--- a/index.html
+++ b/index.html
@@ -130,17 +130,16 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="https://open.spotify.com/track/0T5iIrXA4p5GsubkhuBIKV?si=Hza5KL7hQu2gHqYn7a9IZA&context=spotify%3Asearch%3Ai%2Bfound%2Byou" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
+  <source src="assets/audio/romantic-song.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   <section class="hero">
     <div class="left">
       <h2>You're Invited to The Wedding of</h2>
-      <h1>Putri Fatima Aspari<span>&</span> Levi Adam Hansen</h1>
+      <h1>Putri Fatima Aspari</h1>
       <h1>&</h1>
       <h1>Levi Adam Hansen</h1>
-      <p class="date">Sunday, 31<sup>st</sup> Veomber at 5:00 PM</p>
+      <p class="date">Sunday, 31<sup>st</sup> November at 5:00 PM</p>
       <p class="desc">
         With great joy and love in our hearts, we invite you to celebrate our wedding day.
         Your presence will make our day truly special as we begin this new journey together.
