--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
   </style>
 </head>
 <body>
-  <audio autoplay loop>
-  <source src="assets/audio/romantic-song.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+  <!-- Background music (Stephen Sanchez - Until I Found You) -->
+  <iframe width="0" height="0" src="https://www.youtube.com/embed/5Dqtu8eRcG8?autoplay=1&loop=1&playlist=5Dqtu8eRcG8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="display:none;"></iframe>
+
+
   <section class="hero">
     <div class="left">
       <h2>You're Invited to The Wedding of</h2>
