--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       justify-content: space-between;
       align-items: center;
       padding: 4rem 2rem;
-      background-image: url('https://www.transparenttextures.com/patterns/white-wall.png');
+      background-image: url('assets/background.jpg');
       background-size: cover;
       min-height: 100vh;
     }
