--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
       color: #222;
       text-align: center;
     }
-    
+     .overlay {
+      background: rgba(255, 255, 255, 0.90);
+      padding: 4rem 2rem;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 4rem;
