--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <!-- Background music -->
   <audio autoplay loop>
-    <source src="https://dl.sndup.net/3z5n/Stephen%20Sanchez%20-%20Until%20I%20Found%20You.mp3" type="audio/mpeg">
+    <source src="audio/romantic-song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
