--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
   <!-- Background music -->
   <audio autoplay loop>
-    <source src="audio/romantic-song.mp3" type="audio/mpeg">
+    <source src="audio/romantic-song.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
 
