--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       color: #222;
       text-align: center;
     }
-     .overlay {
-      background: rgba(255, 255, 255, 0.90);
+
+    .overlay {
+      background: rgba(255, 255, 255, 0.95);
       padding: 4rem 2rem;
       min-height: 100vh;
       display: flex;
@@ -23,6 +24,7 @@
       justify-content: center;
       align-items: center;
     }
+
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 4rem;
@@ -50,11 +52,14 @@
     }
 
     .music-player {
-      display: none;
+      margin-top: 2rem;
     }
 
-    audio {
-      display: none;
+    #guest-name {
+      font-weight: 600;
+      color: #aa4b6b;
+      font-size: 1.2rem;
+      margin-top: 1rem;
     }
 
     @media (max-width: 600px) {
@@ -63,15 +68,20 @@
       }
     }
   </style>
+  <script>
+    // Ambil nama dari URL (contoh: ?dear=Putri%20and%20partner)
+    window.addEventListener('DOMContentLoaded', () => {
+      const params = new URLSearchParams(window.location.search);
+      const guest = params.get('dear');
+      if (guest) {
+        document.getElementById('guest-name').textContent = `Dear ${decodeURIComponent(guest)},`;
+      }
+    });
+  </script>
 </head>
 <body>
-  <!-- Background music -->
-  <audio autoplay loop>
-    <source src="audio/romantic-song.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-  </audio>
-
   <div class="overlay">
+    <div id="guest-name"></div>
     <h2>WITH THEIR FEET IN THE SAND</h2>
     <h1>Putri Fatimah Aspari</h1>
     <h1>&</h1>
@@ -85,6 +95,12 @@
     </p>
 
     <p><em>Reception to follow</em></p>
+
+    <div class="music-player">
+      <audio autoplay loop>
+        <source src="assets/romantic-song.mp3" type="audio/mpeg" />
+      </audio>
+    </div>
   </div>
 </body>
 </html>
