--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div class="music-player">
       <audio autoplay loop>
-        <source src="assets/romantic-song.mp3" type="audio/mpeg" />
+        <source src="assets/audio/romantic-song.mp3" type="audio/mpeg" />
       </audio>
     </div>
   </div>
