--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
 
     .overlay {
-      background: rgba(255, 255, 255, 0.6);
+      background: rgba(255, 255, 255, 0.95);
       padding: 4rem 2rem;
       min-height: 100vh;
       display: flex;
@@ -97,10 +97,13 @@
     <p><em>Reception to follow</em></p>
 
     <div class="music-player">
-      <audio autoplay loop>
-        <source src="assets/audio/romantic-song.mp3" type="audio/mpeg" />
-      </audio>
-    </div>
+  <audio id="bg-music" autoplay loop>
+    <source src="assets/romantic-song.mp3" type="audio/mpeg" />
+    Your browser does not support the audio element.
+  </audio>
+  <button onclick="document.getElementById('bg-music').play()">🎶 Play Music</button>
+</div>
+
   </div>
 </body>
 </html>
