--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div class="music-player">
   <audio id="bg-music" autoplay loop>
-    <source src="assets/audio/romantic-song.mp3" type="audio/mpeg" />
+    <source src="assets/romantic-song.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
   </audio>
   <button onclick="document.getElementById('bg-music').play()">🎶 Play Music</button>
