--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <p style="margin-bottom: 0.5rem; font-weight: bold;">Now Playing: Romantic Song</p>
       <div class="player-wrapper">
         <audio id="audioPlayer" autoplay loop>
-          <source src="assets/romantic-song-compressed.mp3" type="audio/mpeg" />
+          <source src="assets/romantic-song.mp3" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
         <button onclick="togglePlay()" id="playPauseBtn">⏸ Pause</button>
