--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
 <body>
   <!-- Welcome popup -->
   <div class="welcome-popup" id="welcomePopup">
-    <h2>Welcome to Putri & Levi's Wedding 💖</h2>
-    <button onclick="enterSite()">Tap to Enter</button>
+    <h2>Welcome to Putri</h2>
+    <h1>&</h1>
+    <h2>Levi's Wedding 💖</h2>
+    <button onclick="enterSite()">Open Invitation</button>
   </div>
 
   <!-- Main Content -->
