--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 <body>
   <!-- Welcome popup -->
   <div class="welcome-popup" id="welcomePopup">
-    <h2>Welcome to Putri</h2>
-    <h1>&</h1>
-    <h2>Levi's Wedding 💖</h2>
+    <h2>Putri</h2>
+    <h1>💖</h1>
+    <h2>Levi</h2>
     <button onclick="enterSite()">Open Invitation</button>
   </div>
 
